  Version 3.11
    1. Killed warning in CGI::Cookie about MOD_PERL_API_VERSION
    2. Fixed append() so that it works in function mode.

  Version 3.10
    1. Added Apache2::RequestIO, which is necessary for mp2 interoperability.

  Version 3.09
    1. Fixed tabindex="0" when using CGI to create forms without a prior start_html
    2. Removed warning about non-numeric MOD_PERL_API_VERSION.

  Version 3.08
    1. update support for mod_perl 2.0.  versions prior to
       mod_perl 1.999_22 (2.0.0-RC5) are no longer supported.

  Version 3.07
    1. Fixed typo in mod_perl detection.

  Version 3.06

    1. Fixed bare call to script() in start_html
    2. Moved Fh::DESTROY out of autoloaded functions so as to avoid
       clobbering $@ when CGI functions are executed in an eval{}
       context.
    3. mod_perl 2.0 version detection patch in CGI::Cookie provided by
       Allen Day.
    4. autoEscape() flag is now respected when generating extra
       attributes.
    5. Tests for *tag start/end generation from Shlomi Fish.
    6. Support for can() method provided by Ron Savage.
    7. Fix for lang='' when outputting XHTML.
    8. Added support for chunked transfer encoding, as suggested by 
	Hakan Ardo
    9. Fixed clobbering of row and column headers in tableized radio
	and checkbox groups, as reported by Nicolas Thierry-Mieg.
   10. <Label> tags are now associated with form elements, as suggested
	by accessibility guidelines.
   11. The <?xml> directive produced by start_html is now turned off by
        default and the charset is specified in a <meta> directive.  Apparently
        IE6 (and maybe some versions of Opera) were getting confused by this.
   12. Support for tab indexes.
   13. Retired the HTML docs.  The POD docs are now primary documentation.
   14. CGI::Carp now correctly detects and handles Apache::Dispatch.
   15. CGI::Util::utf8_chr now correctly sets the UTF8 flag on 5.006 or
	higher perls (fix courtesy Slaven Rezic).


  Version 3.05
